--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title>timeIt</title>
 	<link rel = "stylesheet" href = "styles/main.css">
+	<link rel = "manifest" href = "/manifest.json">
 </head>
 <body>
 
