google authentication implemented

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 
 <h1 id = "title">Welcome to TimeIt!</h1>
 <h2 id= "direction"> Enter the time you wish to countdown</h2>
+<button  id = "signIn" onclick = "signIn()">SignIn!</button>
+<h3 id = "username" hidden></h3>
+<button id = "signOut" onclick = "signOut()" hidden >SignOut! </button>
 
 <form>
 	Minutes: <br>
