--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
 <head>
 	<title>timeIt</title>
 	<link rel = "stylesheet" href = "styles/main.css">
+	<link rel = "stylesheet" href = "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link rel = "manifest" href = "/manifest.json">
+	<script src= "https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	<script type = "text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
-
-<h1 id = "title">Welcome to TimeIt!</h1>
+<div class = "container-fluid">
+<h1 id = "title">TimeIt!</h1>
 <h2 id= "direction"> Enter the time you wish to countdown</h2>
 <button  id = "signIn" onclick = "signIn()">SignIn!</button>
 <h3 id = "username" hidden></h3>
@@ -20,7 +23,9 @@
 	<input type = "number" name = "seconds" id= "sec"><br>
 
 	</form>
-	<button onclick="startIt()">StartIt!</button>
+	<button id = "startIt" onclick="startIt()" disabled>StartIt!</button>
+
+</div>
 
 
 <script src = "scripts/main.js"></script>
